# pydantic-stack-demo

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
01-logfire-hello-world/: main.py
02-pai-mcp-sampling/: client.py  generate_svg.py
distributed-frontend-example/: Makefile  README.md  main.py
distributed-frontend-example/frontend/: .env  index.html  package-lock.json  package.json
distributed-frontend-example/frontend/src/: App.tsx  ClientInstrumentationProvider.tsx  index.css  main.tsx  vite-env.d.ts
durable-exec/: deep_research.py  deep_research_dbos.py  deep_research_durable.py  deep_research_temporal.py  durable_twenty_questions.py  twenty_questions.py  twenty_questions_dbos.py  twenty_questions_durable.py  twenty_questions_evals.py  twenty_questions_temporal.py
fastapi-example/: index.html  main.py  page.html
human-seeded-evals/: README.md  pyproject.toml  run_coach.py  self_improving_demo.py  update_sia.py
human-seeded-evals/app/: agent.py  main.py  models.py  self_improving_agent.py  self_improving_agent_storage.py
human-seeded-evals/auto_evals/: eval_prompt_generator.py
human-seeded-evals/evals/: auto_evals.py  custom_evaluators.py  dataset.json  eval_agent_prompt.txt  main.py  map_data.py
human-seeded-evals/frontend/: CLAUDE.md  README.md  index.html  package-lock.json  package.json  prompt.md  vite.config.js
human-seeded-evals/frontend/.claude/: settings.local.json
human-seeded-evals/frontend/src/: App.tsx  api.ts  main.css
human-seeded-evals/frontend/src/components/: Button.tsx  Card.tsx  Input.tsx  PromptView.tsx  TimeConverter.tsx
logfire-hello-world/: main.py
pai-audio-evals/: assets.json  main.py
pai-gepa-prompt-optimization/: README.md  evals.py  run_optimization.py
pai-hello/: main.py
pai-mcp-sampling/: README.md  client.py  generate_svg.py
pai-memory/: README.md  with_messages.py
pai-pydantic/: retry.py  simple.py
pai-weather/: main.py
prompt_optimization/: README.md  __init__.py  adapter.py  evals.py  run_optimization.py  task.py
