[project]
name = "pydantic-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "devtools>=0.12.2",
    "fastapi>=0.115.14",
    "httpx>=0.28.1",
    "logfire[fastapi,httpx]>=3.21.1",
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.4",
    "uvicorn>=0.34.3",
]

[tool.uv.workspace]
members = ["human-seeded-evals"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"
