[project]
name = "pydantic-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "devtools>=0.12.2",
    "fastapi>=0.115.14",
    "logfire[asyncpg,fastapi,httpx]>=4.10",
    "mcp>=1.15.0",
    "pydantic-ai>=1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.2",
    "asyncpg-stubs>=0.30.2",
    "basedpyright>=1.31.6",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
extend-select = ["Q", "RUF100", "C90", "UP", "I"]
flake8-quotes = { inline-quotes = "single", multiline-quotes = "double" }
isort = { combine-as-imports = true }
mccabe = { max-complexity = 15 }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
# don't format python in docstrings, pytest-examples takes care of it
docstring-code-format = false
quote-style = "single"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = true
reportIgnoreCommentWithoutRule = true
reportUnusedParameter = true
reportIncompatibleUnannotatedOverride = true
reportImplicitAbstractClass = true
venv = ".venv"
exclude = [".git", ".venv", "scratch"]

[tool.codespell]
ignore-words-list = "ans"
